# kittycaster

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
src/kittycaster/: chromecast_helper.py  fileserver.py  logger.py  main.py
src/kittycaster.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kittycaster/kittycaster.egg-info/: PKG-INFO  SOURCES.txt
